# NEXUS_UiPathAgentHack

./: Dockerfile  README.md  RESULT.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: test.yml
artifacts/instance-timeline/: SUMMARY.md  instance-1.json  instance-1.md
assets/video/: DEMO-NARRATION-TIMELINE.md  NARRATION.txt  nexus-sentinel-captions.vtt
assets/video/yt-elevator-pitch/: PLAN.md
docs/: DEMO_SCRIPT.md  HANDOFF-ANTIGRAVITY-VIDEO.md  HF-SPACE-README.md  JUDGE_MATRIX.md  JUDGE_QA.md  LEVEL2_ORCHESTRATION_CONTRACT.md  PASTE-INTO-MAESTRO-XML-TAB.bpmn  PLAN.md  PRESENTATION_OUTLINE.md  PRODUCT-FEEDBACK.md  PRODUCT_FEEDBACK.md  RESEARCH-GROUNDING.md  SKILLS.md  SUBMISSION.md  TWEET-THREAD.md  UIPATH_BUILD_GUIDE.md  nexus-sentinel-research-grounded-plan.md  nexus-sentinel-video-plan-v2.md
evidence/live-test/: output.txt
nexus_uipath_bridge/: __init__.py  app.py
samples/: 01-safety-hold.json  02-approved-remediation.json  03-verification-failed.json  04-verification-passed.json
skills/: README.md
skills/generate-project-handoff-documentation/: SKILL.md  skill.json
skills/perform-adversarial-system-review/: SKILL.md  skill.json
skills/search-and-synthesize-research-papers/: SKILL.md  skill.json
tests/: test_adversarial_probes.py  test_policy_adapter.py  test_uipath_artifact.py
tools/: record_instance.py
uipath/: README.md
uipath/NEXUSSentinelBPMN/: Process.bpmn
uipath/NEXUSSentinelRobot/: Main.xaml  project.json  project.uiproj
