[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-sentinel-uipath-agenthack"
version = "1.0.0"
description = "Governed AI-release incident recovery for UiPath Maestro Case"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
  "fastapi>=0.104,<1",
  "pydantic>=2.5,<3",
  "uvicorn[standard]>=0.24,<1",
]

[project.optional-dependencies]
test = ["httpx>=0.25,<1", "pytest>=7.4,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
